# parley-tap-prompt-injection

./: .gitignore  README.md  _types.py  example_usage.py  injection_parley.py  injection_prompts.py  injection_types.py  models.py  parley.py  pyproject.toml
examples/: example_training_data.json  example_usage.py
src/parley_tap/: __init__.py
src/parley_tap/attacks/: __init__.py  injection_parley.py  parley.py
src/parley_tap/cli/: __init__.py  main.py
src/parley_tap/core/: __init__.py  injection_types.py  models.py
src/parley_tap/prompts/: __init__.py  injection_prompts.py  utils.py
