[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "parley-tap-prompt-injection"
version = "0.1.0"
description = "Tree of Attacks (TAP) implementation for prompt injection attacks on AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "David"}]
dependencies = [
    "mistralai>=1.9.3",
    "openai>=1.98.0",
    "together>=1.5.21",
    "pydantic>=2.0.0",
]

[project.scripts]
parley-tap = "parley_tap.cli.main:main"

[tool.flit.module]
name = "parley_tap"